--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
                 <a href="#" class="news-card featured">
                     <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
                     <div class="card-content">
-                        <span class="card-tag">Évènement</span>
-                        <h4 class="card-title">Session 0</h4>
+                        <div class="card-top-line">
+                            <h4 class="card-title">Session 0</h4>
+                            <span class="card-tag">Évènement</span>
+                        </div>
                         <p class="card-subtitle">Rejoignez-nous le 1 septembre à 5h30 en B652.</p>
                     </div>
                 </a>
@@ -134,24 +136,30 @@
                 <a href="#" class="news-card">
                     <img src="./images/tmp1.png" alt="Nouveauté sur les Cyber-attaques" onerror="this.style.display='none';">
                     <div class="card-content">
-                        <span class="card-tag">Nouveauté</span>
-                        <h4 class="card-title">Cyber-attaques</h4>
+                        <div class="card-top-line">
+                            <h4 class="card-title">Cyber-attaques</h4>
+                            <span class="card-tag">Nouveauté</span>
+                        </div>
                         <p class="card-subtitle">Découvrez les techniques courantes et comment les contrer.</p>
                     </div>
                 </a>
                 <a href="#" class="news-card">
                     <img src="./images/tmp2.png" alt="Nouveauté sur la Forensics" onerror="this.style.display='none';">
                     <div class="card-content">
-                        <span class="card-tag">Nouveauté</span>
-                        <h4 class="card-title">Forensics</h4>
+                        <div class="card-top-line">
+                            <h4 class="card-title">Forensics</h4>
+                            <span class="card-tag">Nouveauté</span>
+                        </div>
                         <p class="card-subtitle">Mettez vos compétences d'analyse forensique à l'épreuve.</p>
                     </div>
                 </a>
                 <a href="#" class="news-card">
                     <img src="./images/tmp3.png" alt="Nouveauté sur la Sécurité Web" onerror="this.style.display='none';">
                     <div class="card-content">
-                        <span class="card-tag">Nouveauté</span>
-                        <h4 class="card-title">Sécurité Web</h4>
+                        <div class="card-top-line">
+                            <h4 class="card-title">Sécurité Web</h4>
+                            <span class="card-tag">Nouveauté</span>
+                        </div>
                         <p class="card-subtitle">Construisez une application web sécurisée de A à Z.</p>
                     </div>
                 </a>
