--- a/lessons.html
+++ b/lessons.html
@@ -39,130 +39,128 @@
         <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="nav-links"></button>
     </header>
 
-    <main>
-        <div class="lessons-main-content">
-            <section class="lesson-category-section">
-                <h2 class="main-title category-title">Web Hacking</h2>
-                <div class="box_container">
-                    <a href="lessons/web-sql-easy/web-sql-easy.html" class="lesson-card" data-lesson-id="web-sql-easy">
-                        <i class="fas fa-globe card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Injection SQL Basique</h4>
-                                <span class="difficulty-tag difficulty-easy">Débutant</span>
-                            </div>
-                            <p>Découvrez les bases des injections SQL et comment les prévenir.</p>
+    <main class="main-lessons">
+        <section class="lesson-category-section">
+            <h2 class="main-title category-title">Web Hacking</h2>
+            <div class="box-container">
+                <a href="lessons/web-sql-easy/web-sql-easy.html" class="lesson-card" data-lesson-id="web-sql-easy">
+                    <i class="fas fa-globe card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Injection SQL Basique</h4>
+                            <span class="difficulty-tag difficulty-easy">Débutant</span>
                         </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
+                        <p>Découvrez les bases des injections SQL et comment les prévenir.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a href="#" class="lesson-card" data-lesson-id="web-xss">
+                    <i class="fas fa-globe card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Cross-Site Scripting (XSS)</h4>
+                            <span class="difficulty-tag difficulty-medium">Confirmé</span>
                         </div>
-                    </a>
-                    <a href="#" class="lesson-card" data-lesson-id="web-xss">
-                        <i class="fas fa-globe card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Cross-Site Scripting (XSS)</h4>
-                                <span class="difficulty-tag difficulty-medium">Confirmé</span>
-                            </div>
-                            <p>Apprenez à identifier et exploiter les vulnérabilités XSS.</p>
+                        <p>Apprenez à identifier et exploiter les vulnérabilités XSS.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a href="#" class="lesson-card" data-lesson-id="web-lfi-rfi">
+                    <i class="fas fa-globe card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Inclusion de Fichiers (LFI/RFI)</h4>
+                            <span class="difficulty-tag difficulty-hard">Avancé</span>
                         </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
-                        </div>
-                    </a>
-                    <a href="#" class="lesson-card" data-lesson-id="web-lfi-rfi">
-                        <i class="fas fa-globe card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Inclusion de Fichiers (LFI/RFI)</h4>
-                                <span class="difficulty-tag difficulty-hard">Avancé</span>
-                            </div>
-                            <p>Explorez les failles d'inclusion de fichiers locaux et distants.</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
-                        </div>
-                    </a>
-                </div>
-            </section>
+                        <p>Explorez les failles d'inclusion de fichiers locaux et distants.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+            </div>
+        </section>
 
-            <section class="lesson-category-section">
-                <h2 class="main-title category-title">OSINT</h2>
-                <div class="box_container">
-                    <a href="#" class="lesson-card" data-lesson-id="osint-intro">
-                        <i class="fas fa-user-secret card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Introduction à l'OSINT</h4>
-                                <span class="difficulty-tag difficulty-easy">Débutant</span>
-                            </div>
-                            <p>Découvrez les principes fondamentaux de la recherche d'informations.</p>
+        <section class="lesson-category-section">
+            <h2 class="main-title category-title">OSINT</h2>
+            <div class="box-container">
+                <a href="#" class="lesson-card" data-lesson-id="osint-intro">
+                    <i class="fas fa-user-secret card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Introduction à l'OSINT</h4>
+                            <span class="difficulty-tag difficulty-easy">Débutant</span>
                         </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
+                        <p>Découvrez les principes fondamentaux de la recherche d'informations.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a href="#" class="lesson-card" data-lesson-id="osint-social">
+                    <i class="fas fa-user-secret card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Reconnaissance sur les Médias Sociaux</h4>
+                            <span class="difficulty-tag difficulty-medium">Confirmé</span>
                         </div>
-                    </a>
-                    <a href="#" class="lesson-card" data-lesson-id="osint-social">
-                        <i class="fas fa-user-secret card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Reconnaissance sur les Médias Sociaux</h4>
-                                <span class="difficulty-tag difficulty-medium">Confirmé</span>
-                            </div>
-                            <p>Techniques avancées pour collecter des informations via les plateformes sociales.</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
-                        </div>
-                    </a>
-                </div>
-            </section>
+                        <p>Techniques avancées pour collecter des informations via les plateformes sociales.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+            </div>
+        </section>
 
-            <section class="lesson-category-section">
-                <h2 class="main-title category-title">Pwned (Exploitation Binaire)</h2>
-                <div class="box_container">
-                    <a href="#" class="lesson-card" data-lesson-id="pwned-buffer">
-                        <i class="fas fa-terminal card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Buffer Overflows Basiques</h4>
-                                <span class="difficulty-tag difficulty-medium">Confirmé</span>
-                            </div>
-                            <p>Comprenez comment une surcharge de tampon peut mener à l'exécution de code.</p>
+        <section class="lesson-category-section">
+            <h2 class="main-title category-title">Pwned (Exploitation Binaire)</h2>
+            <div class="box-container">
+                <a href="#" class="lesson-card" data-lesson-id="pwned-buffer">
+                    <i class="fas fa-terminal card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Buffer Overflows Basiques</h4>
+                            <span class="difficulty-tag difficulty-medium">Confirmé</span>
                         </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
+                        <p>Comprenez comment une surcharge de tampon peut mener à l'exécution de code.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a href="#" class="lesson-card" data-lesson-id="pwned-format">
+                    <i class="fas fa-terminal card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Vulnérabilités Format String</h4>
+                            <span class="difficulty-tag difficulty-hard">Avancé</span>
                         </div>
-                    </a>
-                    <a href="#" class="lesson-card" data-lesson-id="pwned-format">
-                        <i class="fas fa-terminal card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Vulnérabilités Format String</h4>
-                                <span class="difficulty-tag difficulty-hard">Avancé</span>
-                            </div>
-                            <p>Explorez les failles liées aux fonctions de formatage de chaînes.</p>
+                        <p>Explorez les failles liées aux fonctions de formatage de chaînes.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a href="#" class="lesson-card" data-lesson-id="pwned-kernel">
+                    <i class="fas fa-terminal card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Kernel Exploitation</h4>
+                            <span class="difficulty-tag difficulty-expert">Expert</span>
                         </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
-                        </div>
-                    </a>
-                    <a href="#" class="lesson-card" data-lesson-id="pwned-kernel">
-                        <i class="fas fa-terminal card-icon"></i>
-                        <div class="lesson-text-content">
-                            <div class="lesson-title-wrapper">
-                                <h4>Kernel Exploitation</h4>
-                                <span class="difficulty-tag difficulty-expert">Expert</span>
-                            </div>
-                            <p>Plongez au cœur du système et exploitez des vulnérabilités au niveau du noyau.</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fas fa-times-circle checkbox-icon not-completed"></i>
-                        </div>
-                    </a>
-                </div>
-            </section>
-        </div>
+                        <p>Plongez au cœur du système et exploitez des vulnérabilités au niveau du noyau.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer>
