--- a/lessons/web-sql-easy/web-sql-easy.html
+++ b/lessons/web-sql-easy/web-sql-easy.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="../../css/style.css"/>
     <link rel="stylesheet" href="../../css/lesson-page.css"/>
 
-    <script src="web-sql-easy.js" defer></script>
-    <script src="../../js/lessons.js" defer></script>
+    <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
 </head>
 <body>
 
@@ -101,6 +100,9 @@ function helloWorld() {
             </nav>
         </article>
     </main>
+
+    <script src="web-sql-easy.js" defer></script>
+    <script src="../../js/lessons.js" defer></script>
 
 </body>
 </html>
