--- a/lessons/web-sql-easy/web-sql-easy.html
+++ b/lessons/web-sql-easy/web-sql-easy.html
@@ -51,7 +51,7 @@
 
             <section class="lesson-block">
                 <h2><i class="fas fa-code" aria-hidden="true"></i> Section 3 : Exemple concret</h2>
-                <h4>Exemple de code :</h4>
+                <p>Exemple de code :</p>
                 <div class="code-block">
                     <pre><code class="language-js">
 // Un exemple de code générique
@@ -78,15 +78,15 @@ function helloWorld() {
                 
                 <ol class="feature-list">
                     <li>
-                        <h4>Premier Point Important</h4>
+                        <h3>Premier Point Important</h3>
                         <p>Description du premier point clé. C'est le concept le plus fondamental.</p>
                     </li>
                     <li>
-                        <h4>Second Point Important</h4>
+                        <h3>Second Point Important</h3>
                         <p>Description du second point clé, qui s'appuie sur le premier.</p>
                     </li>
                     <li>
-                        <h4>Troisième Point Important</h4>
+                        <h3>Troisième Point Important</h3>
                         <p>Description du troisième point clé pour conclure.</p>
                     </li>
                 </ol>
