leçon forensics preparation

--- a/lessons.html
+++ b/lessons.html
@@ -43,7 +43,7 @@
         <section class="lesson-category-section">
             <h2 class="main-title category-title">Analyse Forensique</h2>
             <div class="box-container">
-                <a href="#" class="lesson-card" data-lesson-id="forensics-intro">
+                <a href="./lessons/forensics-intro.html" class="lesson-card" data-lesson-id="forensics-intro">
                     <i class="fas fa-fingerprint card-icon" aria-hidden="true"></i>
                     <div class="lesson-text-content">
                         <div class="lesson-title-wrapper">
@@ -201,7 +201,7 @@
         <section class="lesson-category-section">
             <h2 class="main-title category-title">Web Hacking</h2>
             <div class="box-container">
-                <a href="lessons/web-sql-easy/web-sql-easy.html" class="lesson-card" data-lesson-id="web-sql-easy">
+                <a href="#" class="lesson-card" data-lesson-id="web-sql-easy">
                     <i class="fas fa-globe card-icon" aria-hidden="true"></i>
                     <div class="lesson-text-content">
                         <div class="lesson-title-wrapper">
