--- a/lessons/forensics-intro.html
+++ b/lessons/forensics-intro.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <main class="lesson-container" data-lesson-id="web-sql-easy">
+    <main class="lesson-container" data-lesson-id="forensics-intro">
         <article class="lesson-content">
             
             <header class="lesson-header">
