fix preload et chemin absolu

--- a/lessons.html
+++ b/lessons.html
@@ -15,25 +15,26 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     
-    <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="./css/header-footer.css"/>
-    <link rel="stylesheet" href="./css/lessons.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/header-footer.css"/>
+    <link rel="stylesheet" href="/css/lessons.css"/>
 
-    <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
+    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
 
-    <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
+    <link rel="preload" as="image" href="/images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
+    <link rel="preload" as="image" href="/images/back.webp" type="image/webp" fetchpriority="high">
 </head>
 <body>
 
     <header>
-        <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
-        <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
+        <a href="/index.html"><img src="/images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
+        <h1 class="title"> <a href="/index.html">Kr[HACK]ademy</a> </h1>
         <nav class="nav-bar" aria-label="Navigation principale">
             <ul id="nav-links">
-                <li><a href="./index.html">ACCUEIL</a></li>
-                <li class="active"><a href="./lessons.html">LEÇONS</a></li>
-                <li><a href="./challenges.html">CHALLENGES</a></li>
-                <li><a href="./scenarios.html">SCÉNARIOS</a></li>
+                <li><a href="/index.html">ACCUEIL</a></li>
+                <li class="active"><a href="/lessons.html">LEÇONS</a></li>
+                <li><a href="/challenges.html">CHALLENGES</a></li>
+                <li><a href="/scenarios.html">SCÉNARIOS</a></li>
             </ul>
         </nav>
         <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="nav-links"></button>
@@ -43,7 +44,7 @@
         <section class="lesson-category-section">
             <h2 class="main-title category-title">Analyse Forensique</h2>
             <div class="box-container">
-                <a href="./lessons/forensics-intro.html" class="lesson-card" data-lesson-id="forensics-intro">
+                <a href="/lessons/forensics-intro.html" class="lesson-card" data-lesson-id="forensics-intro">
                     <i class="fas fa-fingerprint card-icon" aria-hidden="true"></i>
                     <div class="lesson-text-content">
                         <div class="lesson-title-wrapper">
