--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                                 <h4>Leçons</h4>
                             </div>
                             <div class="box-info">
-                                <p>Découvrez les bases fondamentales et maîtrisez les concepts clés avec une approche structurée et complète.</p>
+                                <p>Découvrez les fondamentaux de la cyber et maîtrisez les concepts clés avec une approche structurée et complète.</p>
                                 <ul>
-                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Théorie Solide</li>
-                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Apprentissage Progressif</li>
-                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Ressources Claires</li>
+                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Théorie solide</li>
+                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Apprentissage progressif</li>
+                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Ressources claires</li>
                                 </ul>
                             </div>
                         </div>
@@ -85,11 +85,11 @@
                                 <h4>Challenges</h4>
                             </div>
                             <div class="box-info">
-                                <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et vous mesurer à des scénarios réels.</p>
+                                <p>Testez vos competences en resolvant des challenges de type CTF (Capture The Flag) dans divers domaines.</p>
                                 <ul>
                                     <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Mise en pratique</li>
-                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Scénarios Réels</li>
-                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Compétition Amicale</li>
+                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Développement de compétences</li>
+                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Compétition amicale</li>
                                 </ul>
                             </div>
                         </div>
@@ -105,11 +105,11 @@
                                 <h4>Scénarios</h4>
                             </div>
                             <div class="box-info">
-                                <p>Validez vos acquis en suivant nos scénarios guidés, découvrez des outils puissants et complétez votre profil.</p>
+                                <p>Immergez vous dans des simulations d'attaques pour apprendre à utiliser des outils et comprendre les chaînes d'exploitation.</p>
                                 <ul>
                                     <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
                                     <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils</li>
-                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Guidés et réalistes</li>
+                                    <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Situations réelles</li>
                                 </ul>
                             </div>
                         </div>
