--- a/lessons.html
+++ b/lessons.html
@@ -51,7 +51,7 @@
                             <h4>Introduction à la Forensique</h4>
                             <span class="difficulty-tag difficulty-easy">Débutant</span>
                         </div>
-                        <p>Apprenez les bases de la collecte de preuves numériques et l'analyse de métadonnées.</p>
+                        <p>Découvrez les notions fondamentales de l'analyse forensique.</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
