--- a/lessons/forensics-intro.html
+++ b/lessons/forensics-intro.html
@@ -38,118 +38,109 @@
             <section class="lesson-block">
                 <h2><i class="fas fa-question-circle" aria-hidden="true"></i>Qu'est-ce que l’analyse forensique ?</h2>
                 <p>
-                    L'analyse forensique est la discipline consistant à collecter et analyser les traces numériques laissées par des incidents tels que les cyberattaques, les fuites de données ou les fraudes internes. 
+                    L'analyse forensique, aussi connue sous le nom de « criminalistique numérique », est la discipline qui consiste à collecter et à analyser les traces numériques laissées par des incidents tels que des cyberattaques, des fuites de données ou des fraudes internes.
                 </p>
                 <p>
-                    En identifiant, préservant et examinant ces éléments selon une méthodologie stricte, elle vise à reconstituer la chronologie des événements pour déterminer les actions menées et leurs auteurs. L'objectif est de produire des preuves dont la rigueur de collecte garantit la recevabilité devant un tribunal.
+                    Son but est de reconstituer la chronologie des événements afin de déterminer la nature des actions menées et d'identifier leurs auteurs. Pour ce faire, elle s'appuie sur une méthodologie stricte d'identification, de préservation et d'examen des éléments. L'objectif final est de produire des preuves dont la rigueur de collecte garantit la recevabilité devant un tribunal.
                 </p>
             </section>
 
             <section class="lesson-block">
                 <h2><i class="fas fa-gavel" aria-hidden="true"></i>Le cadre légal et éthique</h2>
                 <p>
-                    Avant toute intervention technique, il est impératif de comprendre que l'analyse forensique est une pratique strictement encadrée par la loi et l'éthique. L'analyste doit opérer en respectant trois piliers fondamentaux :
+                    Avant d'entreprendre toute intervention technique, il est impératif de comprendre que l'analyse forensique est une pratique strictement encadrée par la loi et l'éthique. L'analyste doit opérer en respectant trois piliers fondamentaux :
                 </p>
-                <ol class="feature-list">
-                    <ul><li>
-                        <b>La légitimité de l'accès</b>
-                        <p>Toute investigation nécessite une autorisation formelle (mandat judiciaire, accord contractuel, demande de la direction) pour être légale.</p>
-                    </li></ul>
-                    <ul><li>
-                        <b>Le respect de la vie privée</b>
-                        <p>L'analyste doit se concentrer sur les données pertinentes à l'enquête et garantir la confidentialité des informations personnelles non liées à l'incident, conformément aux réglementations comme le RGPD.</p>
-                    </li></ul>
-                    <ul><li>
-                        <b>L'admissibilité des preuves</b>
-                        <p>Le respect scrupuleux des procédures est ce qui rendra les preuves recevables et crédibles devant la justice.</p>
-                    </li></ul>
-                </ol>
+                <h3>La légitimité de l'accès</h3>
+                <p>Toute investigation, pour être légale, requiert une autorisation formelle, qu'il s'agisse d'un mandat judiciaire, d'un accord contractuel ou d'une demande de la direction.</p>
+                <h3>Le respect de la vie privée</h3>
+                <p>L'analyste doit se concentrer exclusivement sur les données pertinentes à l'enquête et garantir la confidentialité des informations personnelles non liées à l'incident, en accord avec les réglementations comme le RGPD.</p>
+                <h3>L'admissibilité des preuves</h3>
+                <p>C'est le respect scrupuleux des procédures qui assure la crédibilité et la recevabilité des preuves présentées devant la justice.</p>
             </section>
             
             <section class="lesson-block">
                 <h2><i class="fas fa-cogs" aria-hidden="true"></i>Les contextes d'intervention</h2>
                 <p>
-                    L'approche de l'analyste dépend crucialement de l'état du système au moment de l'intervention. On distingue deux contextes majeurs.
+                    L'approche de l'analyste dépend de manière cruciale de l'état du système au moment de l'intervention. On distingue deux contextes majeurs.
                 </p>
                 <h3>L'analyse « à froid » (Dead Forensics)</h3>
                 <p>
-                    C'est l'approche la plus courante. L'intervention se fait sur un système éteint. L'analyse se concentre sur les données "au repos", c'est-à-dire celles qui sont stockées de manière permanente sur les disques durs, les SSD ou autres supports de stockage. C'est le contexte idéal pour réaliser une copie parfaite de la preuve sans risquer de l'altérer.
+                    C'est l'approche la plus commune, réalisée sur un système éteint. L'analyse se concentre alors sur les données « au repos » : celles qui sont stockées de manière permanente sur les disques durs, SSD et autres supports. Ce contexte est idéal pour réaliser une copie parfaite de la preuve sans risquer de l'altérer.
                 </p>
                 <h3>L'analyse « à chaud » (Live Forensics)</h3>
                 <p>
-                    Cette approche est nécessaire lorsque le système est en cours de fonctionnement, souvent pendant un incident actif. L'objectif est de capturer les données volatiles, c'est-à-dire les informations qui disparaîtraient si la machine était éteinte. Cela inclut la mémoire vive (RAM), les connexions réseau actives et les processus en cours. Cette analyse est plus délicate mais indispensable pour comprendre ce qui se passe sur un système en temps réel.
+                    Cette méthode est employée lorsque le système est en cours de fonctionnement, souvent pendant un incident actif. L'objectif est de capturer les données volatiles, c'est-à-dire les informations qui seraient perdues si la machine était éteinte, comme la mémoire vive (RAM), les connexions réseau actives ou les processus en cours. Bien que plus délicate, cette analyse est indispensable pour comprendre en temps réel ce qui se déroule sur un système.
                 </p>
                 <p>
-                    Souvent, les deux approches sont complémentaires : on peut commencer par une analyse "à chaud" pour capturer l'état actuel, puis éteindre le système pour une analyse "à froid" approfondie.
+                    Ces deux approches sont souvent complémentaires : une analyse « à chaud » peut être menée pour capturer l'état instantané, avant d'éteindre le système pour procéder à une analyse « à froid » plus approfondie.
                 </p>
             </section>
 
             <section class="lesson-block">
                 <h2><i class="fas fa-database" aria-hidden="true"></i>La collecte de preuves</h2>
                 <p>
-                    La première responsabilité de l'analyste forensique est de préserver l'intégrité de la scène de crime numérique. Toute action doit être menée avec la garantie que les preuves originales restent intactes et inchangées.
+                    La première responsabilité de l'analyste est de préserver l'intégrité de la scène de crime numérique. Chaque action doit garantir que les preuves originales demeurent intactes, en suivant plusieurs principes.
                 </p>
-                <ul>
-                    <li><b>L'intégrité des données</b><p>Le principe fondamental est de ne jamais travailler directement sur les preuves originales. On opère sur une copie conforme et parfaite de la source de données (disque dur, smartphone, etc.).</p></li>
-                </ul>
-                <ul>
-                    <li><b>L'empreinte numérique</b><p>Pour prouver que cette copie est authentique et identique à l'original, on utilise une "empreinte numérique" (ou hash). Cette empreinte unique certifie que pas un seul bit d'information n'a été modifié durant la copie.</p></li>
-                </ul>
-                <ul>
-                    <li><b>La traçabilité</b><p>Chaque manipulation de la preuve, de sa collecte à son analyse, est rigoureusement documentée dans une chaîne de conservation. Cette traçabilité garantit la validité juridique de l'ensemble de la procédure.</p></li>
-                </ul>
+                <h3>Intégrité des données</h3>
+                <p>Le principe cardinal est de ne jamais travailler directement sur les preuves originales. L'analyste opère systématiquement sur une copie conforme et parfaite de la source de données (disque dur, smartphone, etc.).</p>
+                <h3>Empreinte numérique (Hash)</h3>
+                <p>Pour certifier que la copie est authentique et identique à l'original, on calcule son « empreinte numérique » (hash). Cette signature unique garantit que pas un seul bit n'a été modifié durant le processus de copie.</p>
+                <h3>Traçabilité et chaîne de conservation</h3>
+                <p>Chaque manipulation de la preuve, de sa collecte à son analyse, est rigoureusement documentée dans une « chaîne de conservation ». Cette traçabilité est essentielle pour garantir la validité juridique de la procédure.</p>
             </section>
 
             <section class="lesson-block">
                 <h2><i class="fas fa-search" aria-hidden="true"></i>L'analyse</h2>
                 <p>
-                    Une fois les preuves collectées et préservées, l'analyse peut commencer. Elle consiste à examiner les données pour y trouver des indices pertinents. Une grande partie de ce travail se concentre sur les métadonnées.
+                    Une fois les preuves collectées et leur intégrité assurée, l'analyse peut commencer. Elle consiste à examiner les données pour y déceler des indices pertinents. Une part importante de ce travail se concentre sur les métadonnées.
                 </p>
                 <p>
-                    Les métadonnées sont des informations descriptives cachées dans les fichiers. Elles sont cruciales pour l'enquête, car elles permettent de contextualiser une action. On y trouve trois grandes familles d'informations :
+                    Cruciales pour l'enquête, les métadonnées sont des informations descriptives associées aux fichiers qui permettent de contextualiser une action. On en distingue trois grandes familles :
                 </p>
-                <ul>
-                    <li><b>Informations temporelles</b><p>Les dates et heures de création, de dernière modification ou de dernier accès à un fichier.</p></li>
-                    <li><b>Informations d'origine</b><p>Le nom de l'auteur d'un document, le type d'appareil photo utilisé pour une image, ou le logiciel ayant servi à créer un fichier.</p></li>
-                    <li><b>Informations contextuelles</b><p>Des données de géolocalisation (coordonnées GPS), des informations sur les versions ou les imprimantes utilisées.</p></li>
-                </ul>
+                <h3>Informations temporelles</h3>
+                <p>Dates et heures de création, de dernière modification ou de dernier accès à un fichier.</p>
+                <h3>Informations d'origine</h3>
+                <p>Nom de l'auteur d'un document, modèle de l'appareil photo pour une image, ou logiciel utilisé pour créer un fichier.</p>
+                <h3>Informations contextuelles</h3>
+                <p>Coordonnées de géolocalisation (GPS), versions de logiciels, ou informations sur les imprimantes utilisées.</p>
                 <p>
-                    L'analyse des métadonnées transforme de simples fichiers en pièces à conviction, leur donnant un contexte, une origine et une place dans le fil des événements.
+                    L'analyse des métadonnées transforme ainsi de simples fichiers en véritables pièces à conviction, en leur attribuant un contexte, une origine et une place dans la chronologie des événements.
                 </p>
             </section>
 
-             <section class="lesson-block">
+            <section class="lesson-block">
                 <h2><i class="fas fa-file-alt" aria-hidden="true"></i>Le rapport final</h2>
                 <p>
-                    Le travail d'investigation culmine dans la rédaction d'un rapport d'analyse. Ce document est aussi important que l'analyse elle-même, car il formalise les découvertes. Il doit être :
+                    L'investigation s'achève par la rédaction d'un rapport d'analyse. Ce document, aussi important que l'analyse elle-même, formalise les découvertes et doit posséder plusieurs qualités essentielles.
                 </p>
-                 <ul>
-                    <li><b>Factuel et objectif</b><p>Le rapport expose les faits découverts, sans jugement ni interprétation.</p></li>
-                    <li><b>Clair et compréhensible</b><p>Il est souvent destiné à un public non technique (juges, avocats, managers) et doit donc traduire les conclusions techniques en un langage accessible.</p></li>
-                    <li><b>Reproductible</b><p>Il doit décrire la méthodologie utilisée avec assez de précision pour qu'un autre expert puisse, en théorie, aboutir aux mêmes conclusions.</p></li>
-                </ul>
+                <h3>Factuel et objectif</h3>
+                <p>Le rapport doit exposer les faits découverts, sans jamais verser dans le jugement ou l'interprétation personnelle.</p>
+                <h3>Clair et compréhensible</h3>
+                <p>Souvent destiné à un public non technique (juges, avocats, managers), il doit traduire les conclusions techniques en un langage accessible.</p>
+                <h3>Reproductible</h3>
+                <p>Il doit décrire la méthodologie avec une précision suffisante pour qu'un autre expert puisse, en théorie, suivre les mêmes étapes et parvenir aux mêmes conclusions.</p>
             </section>
 
             <section class="lesson-block">
                 <h2><i class="fas fa-sitemap" aria-hidden="true"></i>Les spécialités de la forensique</h2>
                 <p>
-                    Enfin, il faut savoir que "l’analyse forensique" est un domaine vaste avec plusieurs spécialités, notamment :
+                    L'analyse forensique est un domaine vaste qui se décline en plusieurs spécialités, dont les principales sont :
                 </p>
                  <ul>
-                    <li><b>La forensique sur poste de travail et serveur :</b> L'analyse "classique" des ordinateurs.</li>
+                    <li><b>La forensique sur poste de travail et serveur :</b> L'analyse "classique" d'ordinateurs.</li>
                     <li><b>La forensique mobile :</b> L'investigation sur les smartphones et les tablettes.</li>
                     <li><b>La forensique réseau :</b> L'analyse du trafic et des communications pour retracer les actions d'un attaquant.</li>
-                    <li><b>La forensique du cloud :</b> L'enquête sur des données hébergées par des fournisseurs de services en ligne.</li>
-                </ul>
+                    <li><b>La forensique du cloud :</b> L'enquête sur des données hébergées chez des fournisseurs de services en ligne.</li>
+                 </ul>
             </section>
 
-             <section class="lesson-block">
+            <section class="lesson-block">
                 <h2><i class="fas fa-flag-checkered" aria-hidden="true"></i>Conclusion</h2>
                 <p>
-                   Le but fondamental de l'analyse forensique est de répondre à une question essentielle : que s'est-il réellement passé ?
+                    Le but fondamental de l'analyse forensique est de répondre à une question essentielle : que s'est-il réellement passé ?
                 </p>
                 <p>
-                   À travers une méthodologie stricte de collecte et d'analyse, elle vise à transformer le chaos d'un incident numérique en une chronologie claire et factuelle. En reconstituant la chaîne des événements et en identifiant les actions menées, elle établit la vérité numérique de manière objective. Son objectif final est de matérialiser ces découvertes sous la forme de preuves tangibles et recevables, capables d'éclairer une décision de justice ou une action interne.
+                    Par une méthodologie rigoureuse, elle transforme le chaos d'un incident numérique en une chronologie claire et factuelle. En reconstituant la chaîne des événements et en identifiant les actions menées, l'analyse forensique établit une vérité numérique objective. Son objectif ultime est de matérialiser ces découvertes sous forme de preuves tangibles et recevables, capables d'éclairer une décision de justice ou de motiver une action interne.
                 </p>
             </section>
 
