--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/glitch.css"/>
-    <link rel="stylesheet" href="/css/header-footer.css"/>
-    <link rel="stylesheet" href="/css/index.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/glitch.css"/>
+    <link rel="stylesheet" href="./css/header-footer.css"/>
+    <link rel="stylesheet" href="./css/index.css"/>
 
-    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
+    <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
 
-    <link rel="preload" as="image" href="/images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
-    <link rel="preload" as="image" href="/images/back.webp" type="image/webp" fetchpriority="high">
+    <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
+    <link rel="preload" as="image" href="./images/back.webp" type="image/webp" fetchpriority="high">
 </head>
 <body>
 
     <header>
-        <a href="/index.html"><img src="/images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
-        <h1 class="title"> <a href="/index.html">Kr[HACK]ademy</a> </h1>
+        <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
+        <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
         <nav class="nav-bar" aria-label="Navigation principale">
             <ul id="nav-links">
-                <li class="active"><a href="/index.html">ACCUEIL</a></li>
-                <li><a href="/lessons.html">LEÇONS</a></li>
-                <li><a href="/challenges.html">CHALLENGES</a></li>
-                <li><a href="/scenarios.html">SCÉNARIOS</a></li>
+                <li class="active"><a href="./index.html">ACCUEIL</a></li>
+                <li><a href="./lessons.html">LEÇONS</a></li>
+                <li><a href="./challenges.html">CHALLENGES</a></li>
+                <li><a href="./scenarios.html">SCÉNARIOS</a></li>
             </ul>
         </nav>
         <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="nav_links"></button>
@@ -48,14 +48,14 @@
                 <h3>Créé par le <em>Kr[HACK]en</em> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
             <div class="image-intro">
-                <img src="/images/krhacken_laurier.webp" alt="Logo du club Krhacken avec des lauriers"/>
+                <img src="./images/krhacken_laurier.webp" alt="Logo du club Krhacken avec des lauriers"/>
             </div>
         </section>
 
         <section class="pres">
             <h2>Apprendre <span class="hyphen">&mdash;</span> Pratiquer <span class="hyphen">&mdash;</span> Réussir</h2>
             <div class="box-container">
-                <a href="/lessons.html" class="box-link">
+                <a href="./lessons.html" class="box-link">
                     <div class="box-pres">
                         <div class="box-content-inner">
                             <div class="box-header">
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="/challenges.html" class="box-link">
+                <a href="./challenges.html" class="box-link">
                     <div class="box-pres">
                         <div class="box-content-inner">
                             <div class="box-header">
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="/scenarios.html" class="box-link">
+                <a href="./scenarios.html" class="box-link">
                     <div class="box-pres">
                         <div class="box-content-inner">
                             <div class="box-header">
@@ -122,7 +122,7 @@
             <div class="news-header">
                 <h2>Nouveautés et Évènements</h2>
                 <a href="#" class="news-card featured">
-                    <img src="/images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
+                    <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
                     <div class="card-content">
                         <div class="card-top-line">
                             <h4 class="card-title">Session 0</h4>
@@ -135,7 +135,7 @@
         
             <div class="news-grid">
                 <a href="#" class="news-card">
-                    <img src="/images/tmp1.png" alt="Nouveauté sur les Cyber-attaques" onerror="this.style.display='none';">
+                    <img src="./images/tmp1.png" alt="Nouveauté sur les Cyber-attaques" onerror="this.style.display='none';">
                     <div class="card-content">
                         <div class="card-top-line">
                             <h4 class="card-title">Cyber-attaques</h4>
@@ -145,7 +145,7 @@
                     </div>
                 </a>
                 <a href="#" class="news-card">
-                    <img src="/images/tmp2.png" alt="Nouveauté sur la Forensics" onerror="this.style.display='none';">
+                    <img src="./images/tmp2.png" alt="Nouveauté sur la Forensics" onerror="this.style.display='none';">
                     <div class="card-content">
                         <div class="card-top-line">
                             <h4 class="card-title">Forensics</h4>
@@ -155,7 +155,7 @@
                     </div>
                 </a>
                 <a href="#" class="news-card">
-                    <img src="/images/tmp3.png" alt="Nouveauté sur la Sécurité Web" onerror="this.style.display='none';">
+                    <img src="./images/tmp3.png" alt="Nouveauté sur la Sécurité Web" onerror="this.style.display='none';">
                     <div class="card-content">
                         <div class="card-top-line">
                             <h4 class="card-title">Sécurité Web</h4>
@@ -169,16 +169,16 @@
     </main>
 
     <footer>
-        <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="images/logo.webp" alt="Logo du club Krhacken"> </a>
-        <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
+        <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="./images/logo.webp" alt="Logo du club Krhacken"> </a>
+        <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="./images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
         <p class="footer-legal">
             L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>
             EMAIL : <a href="mailto:contact@krhacken.org">contact@krhacken.org</a>
         </p>
     </footer>
 
-    <script src="js/index.js" defer></script>
-    <script src="js/header.js" defer></script>
+    <script src="./js/index.js" defer></script>
+    <script src="./js/header.js" defer></script>
 
 </body>
 </html>
