--- a/lessons.html
+++ b/lessons.html
@@ -57,6 +57,19 @@
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
                     </div>
                 </a>
+                <a href="./lessons/forensics-metadata.html" class="lesson-card" data-lesson-id="forensics-metadata">
+                    <i class="fas fa-fingerprint card-icon" aria-hidden="true"></i>
+                    <div class="lesson-text-content">
+                        <div class="lesson-title-wrapper">
+                            <h4>Analyse des Métadonnées</h4>
+                            <span class="difficulty-tag difficulty-medium">Confirmé</span>
+                        </div>
+                        <p>Traquez les incohérences entre les métadonnées pour révéler les manipulations.</p>
+                    </div>
+                    <div class="check-box">
+                        <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
+                    </div>
+                </a>
             </div>
         </section>
 
